--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,11 @@
     <meta property="og:title" content="El Rincón de la Sole">
     <meta property="og:description" content="Descubre productos únicos y especiales">
     <meta property="og:type" content="website">
+    <meta name="theme-color" content="{{ config.primary_color }}">
+    <link rel="canonical" href="https://el-rincon-de-la-sole.onrender.com/">
+    <meta property="og:url" content="https://el-rincon-de-la-sole.onrender.com/">
+    <meta property="og:image" content="/static/img/og-default.jpg">
+    <meta name="twitter:card" content="summary_large_image">
     <title>El Rincón de la Sole - Productos Únicos</title>
     <link rel="stylesheet" href="/static/css/style.css">
 
