--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <title>Login - El Rincón de la Sole</title>
+    <title>Login - El Rincón de Sole</title>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
@@ -28,7 +28,7 @@
             </form>
             
             <div class="auth-links">
-                <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
+                <!--<a href="/forgot-password">¿Olvidaste tu contraseña?</a>-->
                 <a href="/">Volver al inicio</a>
             </div>
             
